--- a/resources/config.yml
+++ b/resources/config.yml
@@ -3,7 +3,7 @@ database:
   type: mysql
   mysql:
     host: 127.0.0.1
-    username: Derpific
+    username: root
     password: ""
     schema: Core
   worker-limit: 4
